<resources>
    <string name="app_name">Electric</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="server_error">连接服务器失败</string>
    <string name="trade_time">交易时间</string>
    <string name="trade_no">交易流水号</string>
    <string name="notice">温馨提示：</string>
    <string name="notice1">1、若需发票，请到当地供电营业厅打印</string>
    <string name="notice2">2、若有疑问，请拨打客服热线400-016-0353</string>
    <string name="notice3">1、因行业限制，单笔缴费金额最高2万元；若缴费金额高于2万元，请分多笔缴费</string>
    <string name="notice4">1、户号由十位数字组成，是用电主体唯一标识</string>
    <string name="notice5">1、此功能仅限查询，显示最近5笔缴费记录</string>
    <string name="notice6">1、主管密码为本机器密码</string>
    <string name="show_card">忘带卡？点我</string>
    <string name="str_001">社保</string>
    <string name="str_002">税务</string>
    <string name="str_003">房产</string>
    <string name="str_004">公安</string>
    <string name="str_005">公积金</string>
    <string name="str_006">医疗</string>
    <string name="str_007">教育</string>
    <string name="str_008">政务信息</string>
    <string name="str_009">物业</string>
    <string name="str_010">家政</string>
    <string name="str_011">生鲜</string>
    <string name="str_012">二手</string>
    <string name="str_013">担保</string>
    <string name="str_014">水费</string>
    <string name="str_015">电费</string>
    <string name="str_016">燃气费</string>
    <string name="str_017">通讯</string>
    <string name="str_018">交警</string>
    <string name="str_019">广电</string>
    <string name="str_020">加油卡</string>
    <string name="str_021">保险</string>
    <string name="str_022">智能电卡购电</string>
    <string name="str_023">普通电表缴费</string>
    <string name="str_024">电卡补写</string>
    <string name="str_025">需携带电卡</string>
    <string name="str_026">需开通远程下发</string>
    <string name="str_027">有卡购电</string>
    <string name="str_028">无卡购电</string>
    <string name="str_029">购电记录查询</string>
    <string name="str_030">缴费充值</string>
    <string name="str_031">电费余额查询</string>
    <string name="str_032">末笔补写</string>
    <string name="str_033">次数补写</string>
    <string name="str_034">请输入户号</string>
    <string name="str_035">下一步</string>
    <string name="str_036">用户名称</string>
    <string name="str_037">用户编号</string>
    <string name="str_038">应缴金额</string>
    <string name="str_039">用户地址</string>
    <string name="str_040">当前余额：</string>
    <string name="str_041">请点击右侧数字输入购电金额</string>
    <string name="str_042">购电卡号：</string>
    <string name="str_043">用户名称：</string>
    <string name="str_044">用户地址：</string>
    <string name="str_045">缴费金额：</string>
    <string name="str_046">电卡余额查询</string>
    <string name="str_047">户号：</string>
    <string name="str_048">始页</string>
    <string name="str_049">上一页</string>
    <string name="str_050">下一页</string>
    <string name="str_051">末页</string>
    <string name="str_052">请点击右侧数字输入手机号码</string>
    <string name="str_053">请输入主管密码</string>
    <string name="str_054">无需插卡</string>
    <string name="str_055">请将电卡“芯片”向上，插入卡槽</string>
    <string name="str_056">购电失败</string>
    <string name="str_057">办事指南</string>
    <string name="str_058">公共服务站</string>
    <string name="str_059">业务查询</string>
    <string name="str_060">一、事项名称：</string>
    <string name="str_061">二、事项类别：</string>
    <string name="str_062">七、办理时限：</string>
    <string name="str_063">三、办理流程：</string>
    <string name="str_064">四、前置条件：</string>
    <string name="str_065">五、政策内容：</string>
    <string name="str_066">六、申请资料：</string>
    <string name="str_067">政策查询</string>
    <string name="str_068">请输入身份证号码或业务单号</string>
    <string name="str_069">一、机构名称：</string>
    <string name="str_070">二、业务状态：</string>
    <string name="str_071">三、创建时间：</string>
    <string name="str_072">四、详细</string>
    <string name="str_073">立即查询</string>
    <string name="str_074">请输入主管密码</string>
</resources>
