<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/body_height"
    android:layout_marginBottom="@dimen/body_bottom"
    android:layout_marginTop="@dimen/body_top"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    tools:context=".mvp.ui.activity.payment.electric.SmartPowerFragment">


    <LinearLayout
        android:id="@+id/s_hasCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="223dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_youkagoudian" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:text="@string/str_027"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/e_place_margin"
            android:text="@string/str_025"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text_place" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s_noCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="223dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_wukagoudian" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:text="@string/str_028"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/e_place_margin"
            android:text="@string/str_026"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text_place" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="150dp"
        android:layout_marginTop="223dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_goudianjiluchaxun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:text="@string/str_029"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/s_query_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="223dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_dianfeiyuerchaxun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:text="@string/str_046"
            android:textColor="@color/white"
            android:textSize="@dimen/electric_item_text" />
    </LinearLayout>

</LinearLayout>
