<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/body_height"
    android:layout_marginTop="@dimen/body_top"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/body_bottom"
    tools:context=".mvp.ui.fragment.payment.electric.SmartPowerActivity">


    <LinearLayout
        android:id="@+id/e_smart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_zhinengdianbiao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_022"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:textSize="@dimen/electric_item_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/e_common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_putongdianbiao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_023"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:textSize="@dimen/electric_item_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/e_bx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@mipmap/ic_diankabuxie"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_024"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/electric_item_text_margin"
            android:textSize="@dimen/electric_item_text"/>
    </LinearLayout>

</LinearLayout>
